# msu-algs-1

./: .gitignore  CMakeLists.txt  NC_sequence.txt  README.md  alg101.c  alg102.c  alg113.c  alg114.c  alg121.c  alg131.c  alg142.c  alg151.c  alg151Tests.c  alg173.c  alg31.c  alg32.c  alg41.c  alg42.c  alg51.c  alg52.c  alg53.c  alg61.c  alg62.c  alg63.c  alg71.c  alg72.c  alg73.c  alg81.c  alg91.c  alg92.c  complexn.c  complexn.h  complexnImpl.c  complexnTests.c  list.h  listImpl.c
.github/workflows/: cmake-multi-platform.yml
reading-materials/: LECTURE_NOTES_11.md  LECTURE_NOTES_12.md  LECTURE_NOTES_4.md  LECTURE_NOTES_5.md  README.md
