cmake_minimum_required(VERSION 3.29)
project(msu_algs C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)

add_executable(alg31 alg31.c)
add_executable(alg32 alg32.c)
add_executable(alg41 alg41.c)
add_executable(alg42 alg42.c)
add_executable(alg51 alg51.c)
add_executable(alg52 alg52.c)
add_executable(alg53 alg53.c)
add_executable(alg61 alg61.c)
add_executable(alg62 alg62.c)
add_executable(alg63 alg63.c)
add_executable(alg71 alg71.c)
add_executable(alg72 alg72.c)
add_executable(alg73 alg73.c)
add_executable(alg81 alg81.c)
add_executable(alg91 alg91.c)
add_executable(alg92 alg92.c)
add_executable(alg101 alg101.c)
add_executable(alg102 alg102.c)
add_executable(alg113 alg113.c)
add_executable(alg114 alg114.c)
add_executable(alg131 alg131.c)
add_executable(alg142 alg142.c)
add_executable(alg151 alg151.c)
add_executable(alg151Tests alg151Tests.c)
add_executable(alg173 alg173.c)
add_executable(complexnTests complexnTests.c)


add_library(list listImpl.c)
add_library(complexn complexnImpl.c)

target_link_libraries(alg151 list)
target_link_libraries(alg151Tests list)

target_link_libraries(alg131 complexn)
target_link_libraries(complexnTests complexn)